stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_list_len_non_list.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/list_len_non_list.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × list_len argument has the wrong type
   ╭─[tests/fixtures/diagnostics/types/list_len_non_list.ml:3:16]
 2 │   let value = 1;
 3 │   dbg(list_len(value))
   ·                ──┬──
   ·                  ╰── expected `List<'a>`, found `i64`
 4 │ }
   ╰────
  help: check the call argument type
